--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.0",
+    "babel-plugin-relay": "^9.1.0",
+    "graphql": "^15.3.0",
     "prettify": "^0.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-relay": "^9.1.0",
     "react-scripts": "3.4.1",
+    "relay-compiler": "^9.1.0",
+    "relay-config": "^9.1.0",
+    "relay-hooks": "^3.5.1",
+    "relay-runtime": "^9.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -20,7 +27,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "plop": "plop --plopfile src/generators/index.js"
+    "plop": "plop --plopfile src/generators/index.js",
+    "plop-gql": "plop --plopfile src/generators/index.js && yarn add graphql && yarn add react-relay && yarn add relay-hooks && yarn add relay-runtime && yarn add relay-compiler && yarn add relay-config && yarn add babel-plugin-relay",
+    "relay": "relay-compiler --src ./src/gql --schema ./schema.graphql"
+
   },
   "eslintConfig": {
     "extends": "react-app"
